background stretch issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,34 @@
-body {
-	background-color: powderblue;
+#background {
+	background-image: url('../images/curtains.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	color: white;
+	position: fixed;
+	min-height: 100%;
+	min-width: 100%;
 }
 
 #search{
 	width: 300px;
+}
+
+#search-container{
+	margin: 300px auto;
+}
+
+.favorites, .movies{
+	width: 400px;
+	margin: 10px auto;
+	opacity: .8;
+	background-color: black;
+	color: white;
+	text-align: center;
+}
+
+#favorites-container h1{
+	color: white;
+}
+
+.movies h1{
+	font-size: 2em;
 }
